<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353331"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/begtera"
        android:textColor="#D3771C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="351dp"
        android:layout_marginBottom="684dp"
        android:background="#353331"
        android:drawableBottom="@drawable/back"
        android:fontFamily="@font/corben"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="291dp"
        android:layout_height="393dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/name_reg_field"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/roundborder"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/display_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="#D3771C"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/email_reg_field"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/roundborder"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="#D3771C"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/spinnerRA"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_back"
            android:paddingStart="20dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/pass_reg_field"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/roundborder"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="#D3771C"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/confPass_reg_field"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/roundborder"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="#D3771C"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_accent"
            android:fontFamily="@font/montserrat"
            android:text="@string/submit"
            android:textColor="@color/colorPrimaryDark2"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/create_an_account"
        android:textColor="#D3771C"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="323dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.939">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/already_have_an_account"
            android:textColor="#D3771C"
            android:textSize="17sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#353331"
            android:fontFamily="@font/montserrat"
            android:text="@string/log_in"
            android:textColor="#D3771C"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
